examples/qasm/syntax_errors/e29.qasm
// missing ; in CX

gate cx a,b { CX a,b }

